expected/main/core/bitdata/bitdata25.err
ERROR: "actual/main/core/bitdata/bitdata25.lc", line 4
bitdata ExT/3 = ExR [ x :: ExR ]    -- invalid, no mask test predicates
                ^
Unable to find a mask test for ExR (the tests using == and /= conflict with ExS)

ERROR: Aborting after previously reported error

